Attempting fixes for homepage on mobile/iphone

--- a/wp-content/themes/hmr-theme/assets/css/less/app.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/app.less
@@ -7,6 +7,13 @@
 	.transition-duration(500ms);
 }
 
+@media (max-width:767px) { 
+	* {
+		.transition(none);
+		.transition-duration(0);
+	}
+}
+
 .backstretch * {
 	.transition(all);
 	.transition-duration(0);
