--- a/wp-content/themes/hmr-theme/assets/css/less/views/home.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/views/home.less
@@ -72,7 +72,7 @@
 			//background:url(../img/slideText1.png) no-repeat left top;
 			//width:296px;
 			//height:90px;
-			background-position:right bottom !important;
+			background-position:right bottom;
 			right:20%;
 			bottom:200px;
 		}
@@ -124,7 +124,20 @@
 			//height:89px;
 			left:10%;
 			top:240px;
-			background-position:right bottom !important;
+			background-position:right bottom;
+		}
+	}
+}
+
+@media (max-width:767px) { 
+	.home {
+		.img {
+			bottom: 10px !important;
+			top: auto !important;
+			left: auto !important;
+			right: auto !important;
+			max-width: 100% !important;
+			background-position: left top !important;
 		}
 	}
 }
